2003-05-20  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.0.1.

	* Updated configure.ac script.

2003-05-19  Gray Watson  <gray@outside.256.com>

	* Added dmalloc_page_size() function.

	* Improved the auto-testing in dmalloc_t.

	* Found a [bad] problem with putting pointers back on the free
	list.

	* Added some checking of pointers on the free list.

	* Removed DEBUG_NOT_REMOVABLE and DEBUG_NOT_ADDABLE flags.

	* Added the per-pointer checking for cleared free memory.

	* Compressed the per-pointer admin structure by 8 bytes.

	* Cleaned up the production of dmalloc.h.3 from fillproto file.

2003-05-16  Gray Watson  <gray@outside.256.com>

	* Releasing dmalloc version 5.0.0.

2003-05-14  Gray Watson  <gray@outside.256.com>

	* Removed debug_val.h and error_str.h.

	* Lots of bugs fixed.

	* Removed a number of old error codes.

2003-05-13  Gray Watson  <gray@outside.256.com>

	* Deprecated log-blocks and heap-check-map debug tokens.

	* Removed dmalloc_lp.[ch] stuff.

	* Added -M --memory-limit argument to dmalloc and ability to limit
	the library from allocating more than a certain number of bytes.

	* Getting ready for a huge checkin after a good bunch of work.

2002-06-06  Gray Watson  <gray@outside.256.com>

	* Added a currently in use stats to log-stats.  Thanks Bernard.

2002-02-27  Gray Watson  <gray@outside.256.com>

	* Fixed some literal ranlib entries in the Makefile.in thanks to
	Ralf Fassel.

2002-02-24  Gray Watson  <gray@outside.256.com>

	* Removed the USE_DMALLOC_LEAP functionality.  This was causing
	pains internally and I needed to simplify some of the sections.  I
	apologize for those folks who used this a lot.

2002-02-14  Gray Watson  <gray@outside.256.com>

	* Added a function to close and re-open the dmalloc logfile when
	you process a new set of environmental flags.

	* Added a section to the docs about debugging daemon and CGI
	processes.

2002-01-28  Gray Watson  <gray@outside.256.com>
