@@ -4,6 +4,8 @@
 
 	* Updated configure.ac script.
 
+	* New texinfo.tex macros.
+	
 2003-05-19  Gray Watson  <gray@outside.256.com>
 
 	* Added dmalloc_page_size() function.
@@ -1892,5 +1894,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.288 2003/05/21 03:07:54 gray Exp $
+$Id: ChangeLog,v 1.289 2003/05/21 04:11:53 gray Exp $
 -------------------------------------------------------------------------------
